--- a/blueteam/app/src/main/AndroidManifest.xml
+++ b/blueteam/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
 
         <activity android:name=".fragment.SecondActivity"></activity>
 
+        <activity android:name=".report.ChartActivity"/>
         <activity android:name=".user.LoginActivity"/>
         <activity android:name=".user.RegisterActivity"/>
         <activity android:name=".SplashActivity"/>
